svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vipulsvcfinal
  name: vipulsvcfinal
  namespace: vipul-ns
spec:
  ports:
  - name: 1234-80
    port: 1234
    protocol: TCP
    targetPort: 80
  selector:
    app: vipul-cat-app
  type: ClusterIP
status:
  loadBalancer: {}
